# hadid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  design_guidelines.json  pyproject.toml
.emergent/: emergent.yml
.github/workflows/: ci.yml
backend/: demo_data.py  export_utils.py  importers.py  server.py  tagger.py
backend/tests/: test_hadid_api.py
frontend/: tailwind.config.js
frontend/src/: App.css  App.js  i18n.js  index.css
frontend/src/components/: ConversationRow.jsx  Layout.jsx  PlatformIcon.jsx  SearchOverlay.jsx
frontend/src/context/: AppContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: ConversationDetail.jsx  Conversations.jsx  Dashboard.jsx  ImportPage.jsx  Settings.jsx
hadid/: __init__.py  cli.py  db.py  export.py  models.py  web.py
hadid/importers/: __init__.py  chatgpt.py  claude.py  gemini.py
hadid/web/: __init__.py  server.py  templates.py
hadid/web/static/: __init__.py  app.js  index.html  style.css
memory/: PRD.md
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
tests/: bench_archive.py  test_cli.py  test_edge_cases.py  test_hadid.py  test_web.py
tests/fixtures/: chatgpt_sample.json  claude_sample.json
