[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hadid"
version = "1.0.0"
description = "Own your AI conversations - import, archive, and search your ChatGPT, Claude, and Gemini history locally."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{name = "Hadid Contributors"}]
keywords = ["chatgpt", "claude", "ai", "archive", "search", "local-first", "privacy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/hasanalaaa/hadid"
Repository = "https://github.com/hasanalaaa/hadid"
Changelog = "https://github.com/hasanalaaa/hadid/blob/main/CHANGELOG.md"
Issues = "https://github.com/hasanalaaa/hadid/issues"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
hadid = "hadid.cli:main"

[tool.setuptools.packages.find]
include = ["hadid*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# INDEX_HTML embeds CSS/JS with long lines by design
"hadid/web.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
