[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hadid"
version = "1.1.0"
description = "Own your AI conversations - import, archive, and search your ChatGPT, Claude, and Gemini history locally."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{name = "Hadid Contributors"}]
keywords = ["chatgpt", "claude", "ai", "archive", "search", "local-first", "privacy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/hasanalaaa/hadid"
Repository = "https://github.com/hasanalaaa/hadid"
Changelog = "https://github.com/hasanalaaa/hadid/blob/main/CHANGELOG.md"
Issues = "https://github.com/hasanalaaa/hadid/issues"

[project.optional-dependencies]
dev = ["coverage", "mypy", "pytest"]

[project.scripts]
hadid = "hadid.cli:main"

[tool.setuptools.packages.find]
include = ["hadid*"]

[tool.setuptools.package-data]
"hadid.web.static" = ["*.css", "*.html", "*.js"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
source = ["hadid"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
